# privavida

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/privavida-icons.sfd/: _A.glyph  _B.glyph  _C.glyph  _D.glyph  _E.glyph  _F.glyph  _G.glyph  _H.glyph  _I.glyph  _J.glyph  _K.glyph  _L.glyph  _M.glyph  _N.glyph  _O.glyph  _P.glyph  _Q.glyph  _R.glyph  _S.glyph  _T.glyph  _U.glyph  _V.glyph  _W.glyph  _X.glyph  _Y.glyph  _Z.glyph  a.glyph  asciicircum.glyph  b.glyph  backslash.glyph  bracketleft.glyph  bracketright.glyph  c.glyph  d.glyph  e.glyph  f.glyph  font.props  g.glyph  grave.glyph  h.glyph  (+11 more)
emscripten/: build.sh  index.cpp  index.html  index.js  index.wasm
include/: app.h  app.hpp  nanovg.h  platform.h
ios/: ios.toolchain.cmake
ios/privavida-ios/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  Info.plist  LaunchScreen.storyboard  Networking.cpp  Networking.swift  Renderer.h  Renderer.m  main.m  platform_ios.h  platform_ios.m  privavida-ios-Bridging-Header.h
ios/privavida-ios.xcodeproj/: project.pbxproj
ios/privavida-ios.xcodeproj/xcshareddata/xcschemes/: privavida-ios.xcscheme
ios/privavida-ios/Base.lproj/: Main.storyboard
ios/privavida-ios/nanovg_mtl/: nanovg_mtl.m
lib/nanovg/: CMakeLists.txt
lib/sha256/: CMakeLists.txt
src/: CMakeLists.txt  app.cpp  app.h  gestures.cpp  gestures.hpp  scroll_gesture.cpp  scroll_gesture.hpp  tap_gesture.cpp  tap_gesture.hpp  theme.hpp  ui.cpp  ui.hpp
src/data_layer/: CMakeLists.txt  accounts.cpp  accounts.hpp  contact_lists.cpp  contact_lists.hpp  conversations.cpp  conversations.hpp  events.cpp  events.hpp  images.cpp  images.hpp  profiles.cpp  profiles.hpp  relays.cpp  relays.hpp
src/models/: CMakeLists.txt  account.cpp  account.hpp  client_message.cpp  client_message.hpp  event.cpp  event.hpp  event_builder.hpp  event_compose.cpp  event_compose.hpp  event_content.cpp  event_content.hpp  event_parse.cpp  event_parse.hpp  event_stringify.cpp  event_stringify.hpp  event_write.cpp  event_write.hpp  filters.hpp  hex.cpp  hex.hpp  keys.cpp  keys.hpp  nip04.cpp  nip04.hpp  nip31.cpp  nip31.hpp  nostr_bech32.cpp  nostr_bech32.hpp  nostr_entity.cpp  nostr_entity.hpp  profile.cpp  profile.hpp  relative.hpp  relay_info.hpp  relay_message.cpp  relay_message.hpp  relay_message_parse.cpp  relay_message_parse.hpp  relay_message_stringify.cpp  (+2 more)
src/models/c/: CMakeLists.txt  bech32.c  bech32.h
src/network/: CMakeLists.txt  handle_event.cpp  handle_event.hpp  network.cpp  network.hpp  relay.hpp  subscription.hpp
src/nostr/: CMakeLists.txt  accounts.cpp  accounts.hpp
src/utils/: CMakeLists.txt  animation.cpp  animation.hpp  arena.hpp  icons.hpp  stackbuffer.hpp  text_rendering.cpp  text_rendering.hpp  timer.cpp  timer.hpp  worker.hpp
src/views/: CMakeLists.txt  Conversation.cpp  Conversation.hpp  Conversations.cpp  Conversations.hpp  LoginView.cpp  LoginView.hpp  Root.cpp  Root.hpp  ScrollView.cpp  ScrollView.hpp  SubView.hpp
src/views/ChatView/: CMakeLists.txt  ChatMessage.cpp  ChatMessage.hpp  ChatView.cpp  ChatView.hpp  ChatViewEntry.cpp  ChatViewEntry.hpp  Composer.cpp  Composer.hpp  TokenizedContent.cpp  TokenizedContent.hpp  VirtualizedList.cpp  VirtualizedList.hpp
src/views/MessageInspect/: CMakeLists.txt  MessageInspect.cpp  MessageInspect.hpp
src/views/TextInput/: CMakeLists.txt  TextInput.cpp  TextInput.hpp
src/views/TextRender/: CMakeLists.txt  TextRender.cpp  TextRender.hpp
src/views/TokenizedContent/: CMakeLists.txt  TokenizedContent.cpp  TokenizedContent.hpp
